--- a/app/src/main/res/layout/item_filme.xml
+++ b/app/src/main/res/layout/item_filme.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/text_titulo_filme"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="Título do filme"
         android:text="TextView" />
