--- a/app/src/main/res/layout/item_filme.xml
+++ b/app/src/main/res/layout/item_filme.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:layout_margin="6dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardCornerRadius="8dp">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+    <ImageView
+        android:id="@+id/image_poster_filme"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        android:scaleType="fitXY">
+
+    </ImageView>
 
     <TextView
         android:id="@+id/text_titulo_filme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/image_poster_filme"
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
+        android:padding="8dp"
         tools:text="Título do filme"
         android:text="TextView" />
 
-</LinearLayout>
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
